--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,6 @@ body {
     1px 2.5px 0px #999999, 1px 10px 5px rgba(16, 16, 16, 0.5),
     1px 12px 10px rgba(16, 16, 16, 0.4), 1px 14px 15px rgba(16, 16, 16, 0.3),
     1px 16px 20px rgba(16, 16, 16, 0.2);
-
 }
 
 #welcome-container {
@@ -318,5 +317,15 @@ footer img {
 @media screen and (max-width: 850px) {
   .modal-btn-container button {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .header-name {
+    font-size: 2.5rem;
+  }
+
+  .content-container {
+    padding: 0 0.5rem 0.5rem 0.5rem;
   }
 }
